--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,7 +24,22 @@ jobs:
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
     - uses: actions/checkout@v2
-    - uses: actions/setup-ruby@v1
+
+    - name: Cache Test Reporter dependency
+      id: cache-primes
+      uses: actions/cache@v2
+      with:
+        path: cc-test-reporter
+        key: ${{ runner.os }}-primes
+
+    - name: Generate Prime Numbers
+      if: steps.cache-primes.outputs.cache-hit != 'true'
+      run: |
+        curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
+        chmod +x ./cc-test-reporter
+
+    - name: setup Ruby
+      uses: actions/setup-ruby@v1
       with:
         ruby-version: '2.6'
 
@@ -34,10 +49,7 @@ jobs:
         gem install bundler:1.17.2
         bundle
     - name: Reporter setup
-      run: |
-        curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
-        chmod +x ./cc-test-reporter
-        ./cc-test-reporter -d before-build
+      run: ./cc-test-reporter -d before-build
 
     # Runs a set of commands using the runners shell
     - name: Run Rspec
