--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -42,11 +42,20 @@ jobs:
       with:
         ruby-version: '2.6'
 
+    - uses: actions/cache@v2
+      with:
+        path: vendor/bundle
+        key: ${{ runner.os }}-gems-${{ hashFiles('**/Gemfile.lock') }}
+        restore-keys: |
+          ${{ runner.os }}-gems-
+
     # Runs a single command using the runners shell
-    - name: Install development/test dependencies
+    - name: Bundle Install
       run: |
         gem install bundler:1.17.2
-        bundle
+        bundle config path vendor/bundle
+        bundle install --jobs 4 --retry 3
+
     - name: Reporter setup
       run: ./cc-test-reporter -d before-build
 
