--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -61,7 +61,7 @@ jobs:
 
     # Runs a set of commands using the runners shell
     - name: Run Rspec
-      run: COVERAGE=true rspec --tag ~redis_cache:true
+      run: COVERAGE=true bundle exec rspec --tag ~redis_cache:true
 
     - name: Send coverage report
       run: ./cc-test-reporter -d after-build -t simplecov
