--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -52,7 +52,7 @@ jobs:
     # Runs a single command using the runners shell
     - name: Bundle Install
       run: |
-        gem install bundler:1.17.2
+        gem install bundler:1.17.2 -N
         bundle config path vendor/bundle
         bundle install --jobs 4 --retry 3
 
