--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,11 +18,17 @@ jobs:
     runs-on: ubuntu-latest
     env:
       CC_TEST_REPORTER_ID: ${{ secrets.CC_TEST_REPORTER_ID }}
+      REDIS_URL: redis://localhost:6379
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
     - uses: actions/checkout@v2
+
+    - name: Start Redis
+      uses: supercharge/redis-github-action@1.1.0
+      with:
+        redis-version: 4
 
     - name: Cache Test Reporter dependency
       id: cache-binary-test-reporter
@@ -61,7 +67,7 @@ jobs:
 
     # Runs a set of commands using the runners shell
     - name: Run Rspec
-      run: COVERAGE=true bundle exec rspec --tag ~redis_cache:true
+      run: COVERAGE=true bundle exec rspec
 
     - name: Send coverage report
       run: ./cc-test-reporter -d after-build -t simplecov
